@@ -27,7 +27,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath 'net.sf.proguard:proguard-gradle:6.2.2'
     }
 }
@@ -185,7 +185,7 @@ android {
 dependencies {
     implementation 'com.google.re2j:re2j:1.3'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.4.1'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
